--- a/views/first.ejs
+++ b/views/first.ejs
@@ -437,14 +437,28 @@
             </div>
             <div class="right_contact">
               <form action="/" method="post">
-                <label for="" class="name_label">Your Name:</label>
-                <input type="text" class="name_input" name="name" />
-                <label for="" class="email_label">Your Email:</label>
-                <input type="text" class="email_input" name="email" />
-                <label for="" class="subject_label">Subject:</label>
-                <input type="text" class="subject_input" name="subject" />
-                <label for="" class="message_label">Message:</label>
-                <input type="text" class="message_input" name="message" />
+                <label for="name" class="name_label">Your Name:</label>
+                <input type="text" id="name" class="name_input" name="name" />
+                <label for="email" class="email_label">Your Email:</label>
+                <input
+                  type="text"
+                  id="email"
+                  class="email_input"
+                  name="email"
+                />
+                <label for="subject" class="subject_label">Subject:</label>
+                <input
+                  type="text"
+                  id="subject"
+                  class="subject_input"
+                  name="subject"
+                />
+                <label for="message" class="message_label">Message:</label>
+                <textarea
+                  id="message"
+                  class="message_input"
+                  name="message"
+                ></textarea>
                 <div class="button">
                   <button
                     name="button"
