--- a/public/styles/first.css
+++ b/public/styles/first.css
@@ -498,6 +498,7 @@ html {
   height: 100%;
   background-color: var(--bone);
   color: var(--darkB);
+  font-family: "Montserrat", sans-serif;
 }
 
 .contact_title {
@@ -585,6 +586,8 @@ form {
   grid-column: 1/3;
   grid-row: 6;
   height: 10rem;
+  resize: vertical;
+  margin: 10px;
 }
 
 .button {
@@ -611,8 +614,8 @@ button:hover {
 }
 
 input {
-  margin: 0 1rem 1rem 1rem;
-  padding: 0 0 1rem 0;
+  margin: 0 1rem 0.5rem 1rem;
+  padding: 0.5rem 0 0.5rem 0;
 }
 
 label {
