Double ID fixed

--- a/views/first.ejs
+++ b/views/first.ejs
@@ -115,7 +115,7 @@
           <div class="nav">
             <nav class="nav_bar">
               <li class="home_nav">
-                <a id="home_a" id="home_nav" href="#main"
+                <a id="home_a" href="#main"
                   ><i class="fa-solid fa-house"></i> Home</a
                 >
               </li>
