--- a/views/first.ejs
+++ b/views/first.ejs
@@ -1,6 +1,6 @@
 <!-- Hanna Nicolas
     Full portfolio
-    Start Date Ap:ril, 27th 2023 -->
+    Start Date: April, 27th 2023 -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -22,60 +22,40 @@
         <p>MESSAGE SENT</p>
       </section>
 
-      <!-- TOP BAR SECTION THAT ONLY DISPLAYS WHEN THE WINDOW IS SMALLES THEN THE USUAL -->
+      <!-- TOP BAR SECTION THAT ONLY DISPLAYS WHEN THE WINDOW IS SMALLER THEN THE USUAL -->
       <section class="topbar_section">
         <div class="topbar">
-          <!-- <div class="top_social_media">
-            <a class="facebook" href="https://www.facebook.com/hanna.nicolas.9">
-              <i class="fa-brands fa-facebook fa-2xl" style="color: #ffffff"></i
-            ></a>
-            <a class="twitter" href=""
-              ><i class="fa-brands fa-twitter fa-2xl" style="color: #ffffff"></i
-            ></a>
-
-            <a
-              class="linkedin"
-              href="https://www.linkedin.com/in/hanna-nicolas-88466023a/"
-              ><i
-                class="fa-brands fa-linkedin fa-2xl"
-                style="color: #ffffff"
-              ></i
-            ></a>
-            <a class="instagram" href="https://www.instagram.com/hannaknm/"
-              ><i
-                class="fa-brands fa-square-instagram fa-2xl"
-                style="color: #ffffff"
-              ></i
-            ></a>
-          </div> -->
-
           <nav class="top_nav_bar">
             <nav class="up_nav_bar">
-              <li class="top_home_nav">
-                <a id="home_nav" href="#main"
-                  ><i class="fa-solid fa-house"></i> Home</a
-                >
-              </li>
-              <li class="top_about_nav">
-                <a href="#about"><i class="fa-solid fa-user"></i> About</a>
-              </li>
-              <li class="top_resume_nav">
-                <a href="#resume_education"
-                  ><i class="fa-solid fa-file"></i> ResuEdu</a
-                >
-              </li>
+              <ol>
+                <li class="top_home_nav">
+                  <a id="home_nav" href="#main"
+                    ><i class="fa-solid fa-house"></i> Home</a
+                  >
+                </li>
+                <li class="top_about_nav">
+                  <a href="#about"><i class="fa-solid fa-user"></i> About</a>
+                </li>
+                <li class="top_resume_nav">
+                  <a href="#resume_education"
+                    ><i class="fa-solid fa-file"></i> ResuEdu</a
+                  >
+                </li>
+              </ol>
             </nav>
             <nav class="down_nav_bar">
-              <li class="top_contact_nav">
-                <a href="#contact"
-                  ><i class="fa-solid fa-envelope"></i> Contact</a
-                >
-              </li>
-              <li class="top_portfolio_nav">
-                <a href="#portfolio"
-                  ><i class="fa-solid fa-book-open"></i> Portfolio</a
-                >
-              </li>
+              <ol>
+                <li class="top_contact_nav">
+                  <a href="#contact"
+                    ><i class="fa-solid fa-envelope"></i> Contact</a
+                  >
+                </li>
+                <li class="top_portfolio_nav">
+                  <a href="#portfolio"
+                    ><i class="fa-solid fa-book-open"></i> Portfolio</a
+                  >
+                </li>
+              </ol>
             </nav>
           </nav>
         </div>
@@ -114,31 +94,33 @@
 
           <div class="nav">
             <nav class="nav_bar">
-              <li class="home_nav">
-                <a id="home_a" href="#main"
-                  ><i class="fa-solid fa-house"></i> Home</a
-                >
-              </li>
-              <li class="about_nav">
-                <a id="about_a" href="#about"
-                  ><i class="fa-solid fa-user"></i> About</a
-                >
-              </li>
-              <li class="resume_nav">
-                <a id="resume_a" href="#resume_education"
-                  ><i class="fa-solid fa-file"></i> ResuEdu</a
-                >
-              </li>
-              <li class="portfolio_nav">
-                <a id="portfolio_a" href="#portfolio"
-                  ><i class="fa-solid fa-book-open"></i> Portfolio</a
-                >
-              </li>
-              <li class="contact_nav">
-                <a id="contact_a" href="#contact"
-                  ><i class="fa-solid fa-envelope"></i> Contact</a
-                >
-              </li>
+              <ol>
+                <li class="home_nav">
+                  <a id="home_a" href="#main"
+                    ><i class="fa-solid fa-house"></i> Home</a
+                  >
+                </li>
+                <li class="about_nav">
+                  <a id="about_a" href="#about"
+                    ><i class="fa-solid fa-user"></i> About</a
+                  >
+                </li>
+                <li class="resume_nav">
+                  <a id="resume_a" href="#resume_education"
+                    ><i class="fa-solid fa-file"></i> ResuEdu</a
+                  >
+                </li>
+                <li class="portfolio_nav">
+                  <a id="portfolio_a" href="#portfolio"
+                    ><i class="fa-solid fa-book-open"></i> Portfolio</a
+                  >
+                </li>
+                <li class="contact_nav">
+                  <a id="contact_a" href="#contact"
+                    ><i class="fa-solid fa-envelope"></i> Contact</a
+                  >
+                </li>
+              </ol>
             </nav>
           </div>
 
@@ -190,38 +172,40 @@
               semester but thankfully, we have been able to keep moving forward.
             </p>
             <div class="about_list">
-              <li>
-                <i class="fa-light fa-greater-than fa-2xl"></i>
-                <span class="birthday">Birthday: </span> December 27 2002
-              </li>
-              <li>
-                <i class="fa-light fa-greater-than fa-2xl"></i>
-                <span class="website">Website: </span> www.hnicolas.dev
-              </li>
-              <li>
-                <i class="fa-light fa-greater-than fa-2xl"></i>
-                <span class="phone">Phone: </span> +1-519-403-9508
-              </li>
-              <li>
-                <i class="fa-light fa-greater-than fa-2xl"></i>
-                <span class="city">City: </span> Waterloo, Canada
-              </li>
-              <li>
-                <i class="fa-light fa-greater-than fa-2xl"></i>
-                <span class="age">Age: </span> 20
-              </li>
-              <li>
-                <i class="fa-light fa-greater-than fa-2xl"></i>
-                <span class="degree">Degree: </span> Diploma
-              </li>
-              <li>
-                <i class="fa-light fa-greater-than fa-2xl"></i>
-                <span class="email">Email: </span> hannnanicolasca@gmail.com
-              </li>
-              <li>
-                <i class="fa-light fa-greater-than fa-2xl"></i>
-                <span class="freelance">Freelance: </span> Available
-              </li>
+              <ol>
+                <li>
+                  <i class="fa-light fa-greater-than fa-2xl"></i>
+                  <span class="birthday">Birthday: </span> December 27 2002
+                </li>
+                <li>
+                  <i class="fa-light fa-greater-than fa-2xl"></i>
+                  <span class="website">Website: </span> www.hnicolas.dev
+                </li>
+                <li>
+                  <i class="fa-light fa-greater-than fa-2xl"></i>
+                  <span class="phone">Phone: </span> +1-519-403-9508
+                </li>
+                <li>
+                  <i class="fa-light fa-greater-than fa-2xl"></i>
+                  <span class="city">City: </span> Waterloo, Canada
+                </li>
+                <li>
+                  <i class="fa-light fa-greater-than fa-2xl"></i>
+                  <span class="age">Age: </span> 20
+                </li>
+                <li>
+                  <i class="fa-light fa-greater-than fa-2xl"></i>
+                  <span class="degree">Degree: </span> Diploma
+                </li>
+                <li>
+                  <i class="fa-light fa-greater-than fa-2xl"></i>
+                  <span class="email">Email: </span> hannnanicolasca@gmail.com
+                </li>
+                <li>
+                  <i class="fa-light fa-greater-than fa-2xl"></i>
+                  <span class="freelance">Freelance: </span> Available
+                </li>
+              </ol>
             </div>
             <p class="about_pp">
               <span class="fact"> Fun fact:</span> Out of all the years I lived
@@ -247,36 +231,38 @@
             earn multiple sets of skills.
           </p>
           <div class="skills_list">
-            <li>
-              <i class="fa-light fa-greater-than fa-2xl"></i>
-              <span class="html">HTML: 100% </span> <br />
-              <hr class="html_hr" />
-            </li>
-            <li>
-              <i class="fa-light fa-greater-than fa-2xl"></i>
-              <span class="node">NodeJS: 55% </span> <br />
-              <hr class="node_hr" />
-            </li>
-            <li>
-              <i class="fa-light fa-greater-than fa-2xl"></i>
-              <span class="js">JavaScript: 75% </span> <br />
-              <hr class="js_hr" />
-            </li>
-            <li>
-              <i class="fa-light fa-greater-than fa-2xl"></i>
-              <span class="css">CSS: 85% </span> <br />
-              <hr class="css_hr" />
-            </li>
-            <li>
-              <i class="fa-light fa-greater-than fa-2xl"></i>
-              <span class="express">Express: 55%</span> <br />
-              <hr class="express_hr" />
-            </li>
-            <li>
-              <i class="fa-light fa-greater-than fa-2xl"></i>
-              <span class="c">C#: UNDEFINED</span> <br />
-              <hr class="c_hr" />
-            </li>
+            <ol>
+              <li>
+                <i class="fa-light fa-greater-than fa-2xl"></i>
+                <span class="html">HTML: 100% </span> <br />
+                <hr class="html_hr" />
+              </li>
+              <li>
+                <i class="fa-light fa-greater-than fa-2xl"></i>
+                <span class="node">NodeJS: 55% </span> <br />
+                <hr class="node_hr" />
+              </li>
+              <li>
+                <i class="fa-light fa-greater-than fa-2xl"></i>
+                <span class="js">JavaScript: 75% </span> <br />
+                <hr class="js_hr" />
+              </li>
+              <li>
+                <i class="fa-light fa-greater-than fa-2xl"></i>
+                <span class="css">CSS: 85% </span> <br />
+                <hr class="css_hr" />
+              </li>
+              <li>
+                <i class="fa-light fa-greater-than fa-2xl"></i>
+                <span class="express">Express: 55%</span> <br />
+                <hr class="express_hr" />
+              </li>
+              <li>
+                <i class="fa-light fa-greater-than fa-2xl"></i>
+                <span class="c">C#: UNDEFINED</span> <br />
+                <hr class="c_hr" />
+              </li>
+            </ol>
           </div>
         </div>
       </section>
