--- a/public/styles/first.css
+++ b/public/styles/first.css
@@ -23,6 +23,12 @@
   width: 5%;
 }
 
+ol {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
 .test {
   color: var(--lightB);
   /* background-color: var(--lightB); */
