--- a/views/first.ejs
+++ b/views/first.ejs
@@ -135,6 +135,10 @@
       <!-- MAIN SECTION WHICH JUST CONTAINS THE MASSIVE PHOTO AND TWO "TITLES" -->
       <section id="main" class="main_section">
         <div class="main">
+          <label class="switch">
+            <input onclick="darkMode()" type="checkbox" />
+            <span class="slider round"></span>
+          </label>
           <h1>I REALLY DONT KNOW WHAT TO PUT HERE</h1>
           <p>I'm starting</p>
         </div>
@@ -142,7 +146,7 @@
 
       <!-- <section id="controls_about"></section> -->
       <!-- ABOUT SECTION WHICH CONTAINS A BRIFE INTRODUCTION OF WHO I AM, THE CAREER IM STUDYING, SOME MORE OF MY INFORMATION AND A FUN FACT -->
-      <section id="about" class="about_section">
+      <section id="about" class="about_section" class="about_mode">
         <div class="about_title">
           <h1>About</h1>
           <hr class="titles_hr" />
@@ -218,7 +222,7 @@
       </section>
 
       <!-- SKILLS SECTION THAT FOCUS MOSTLY IN MY HARD SKILLS I'VE LEARNED IN COLLEGE, SHOULD INCLUDE SOME SOFT SKILLS -->
-      <section id="skills" class="skills_section">
+      <section id="skills" class="skills_section" class="skills_mode">
         <div class="skills_title">
           <h1>Skills</h1>
           <hr class="titles_hr" />
@@ -269,7 +273,11 @@
 
       <!-- <section id="controls_resume"></section> -->
       <!-- RESUME AND EDUCATION SECTION THAT CONTAINS LIKE THE TITLE SAYS MY EDUCATIN FROM BEGINNING TILL TODAY AND MY PROFESSIONAL EXPERIENCE IN ALL OF MY YEARS -->
-      <section id="resume_education" class="resume_education_section">
+      <section
+        id="resume_education"
+        class="resume_education_section"
+        class="resume_education_mode"
+      >
         <div class="resume_education_title">
           <h1>Resume and Education</h1>
           <hr class="titles_hr" />
@@ -345,7 +353,7 @@
 
       <!-- <section id="controls_portfolio"></section> -->
       <!-- PORTFOLIO SECTION THAT FOR NOW HAS EXAMPLES ONLY, HAVEN'T WORKED IN ANY GOOD PROJECT I CAN PUT HERE -->
-      <section id="portfolio" class="portfolio_section">
+      <section id="portfolio" class="portfolio_section" class="portfolio_mode">
         <div class="portfolio_title">
           <h1>Portfolio</h1>
           <hr class="titles_hr" />
@@ -389,7 +397,7 @@
 
       <!-- <section id="controls_contact"></section> -->
       <!-- CONTACT SECTION WHICH CONTAINS ALL OF THE INFORMATION IN WHICH YOU WILL BE ABLE TO CONTACT ME, AND ALSO A CONTACT FORM -->
-      <section id="contact" class="contact_section">
+      <section id="contact" class="contact_section" class="contact_mode">
         <div class="contact_title">
           <h1>Contact</h1>
           <hr class="titles_hr" />
