--- a/public/styles/first.css
+++ b/public/styles/first.css
@@ -76,6 +76,75 @@ html {
   display: none;
 }
 
+/* ---------------------SWITCH BUTTON START--------------------- */
+
+.dark-mode {
+  background-color: black;
+  color: white;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: var(--black);
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px var(--black);
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(42px);
+  -ms-transform: translateX(42px);
+  transform: translateX(42px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+/* ---------------------SWITCH BUTTON END--------------------- */
+
 /* ---------------------TOPBAR SECTION START--------------------- */
 
 .topbar_section {
@@ -270,12 +339,15 @@ html {
 
 /* ---------------------ABOUT SECTION START--------------------- */
 
+#about {
+  background-color: var(--bone);
+  color: var(--darkB);
+}
+
 .about_section {
   grid-column: 2/5;
   width: 100%;
   height: 100%;
-  background-color: var(--bone);
-  color: var(--darkB);
 }
 
 .about_title {
@@ -353,11 +425,15 @@ html {
 
 /* ---------------------SKILLS SECTION START--------------------- */
 
+#skills {
+  background-color: var(--white);
+  color: var(--darkB);
+}
+
 .skills_section {
   grid-column: 2/5;
   width: 100%;
   height: 100%;
-  color: var(--darkB);
 }
 
 .skills_title {
