--- a/views/main.ejs
+++ b/views/main.ejs
@@ -521,7 +521,8 @@
         VERTE TRABAJANDO DE ESTO QUE ESTAS ESTUDIANDO. ES TRISTE.
       </section> -->
 
-      <script src="/public/scripts/first.js"></script>
+      <script src="/public/scripts/update.js"></script>
+      <script src="/public/scripts/darkMode.js"></script>
     </div>
   </body>
 </html>
