--- a/views/main.ejs
+++ b/views/main.ejs
@@ -296,15 +296,15 @@
               <h1 class="education_title">Education</h1>
               <div class="education_experience">
                 <h2>High School Diploma, UEP "Simon Bolivar"</h2>
-                <p id="years">2014-2019</p>
+                <p class="years" id="years">2014-2019</p>
                 <p class="location">Carupano, Venezuela</p>
                 <p>Graduated in the best in my class</p>
 
                 <h2>System Engineering Diploma, Universidad Santa Maria</h2>
-                <p id="years">2019-2021</p>
-                <p id="years" class="location">Puerto La Cruz, Venezuela</p>
+                <p class="years" id="years">2019-2021</p>
+                <p class="location">Puerto La Cruz, Venezuela</p>
                 <h2>Computer programming, Conestoga College</h2>
-                <p id="years">2022-2024</p>
+                <p class="years" id="years">2022-2024</p>
                 <p class="location">Waterloo, Canada</p>
                 <p class="education_p">
                   I am currently studying computer programming. I have some
@@ -317,7 +317,7 @@
               <h1 class="resume_title">Professional Experience</h1>
               <div class="resume_experience">
                 <h2>Cashier, New Shop</h2>
-                <p id="years">2015-2017</p>
+                <p class="years" id="years">2015-2017</p>
                 <ul>
                   <li>
                     Handled large amount of money and multiple transactions.
@@ -326,7 +326,7 @@
                 </ul>
 
                 <h2>Salesman, New Shop</h2>
-                <p id="years">2017-2018</p>
+                <p class="years" id="years">2017-2018</p>
                 <ul>
                   <li>
                     Helped customers to get the right fit and supply them with
@@ -336,7 +336,7 @@
                 </ul>
 
                 <h2>Manager, New Shop</h2>
-                <p id="years">2019-2021</p>
+                <p class="years" id="years">2019-2021</p>
                 <ul>
                   <li>Managed a team of 6 people</li>
                   <li>
