dark mode js update

--- a/public/styles/first.css
+++ b/public/styles/first.css
@@ -206,7 +206,7 @@ input:checked + .slider:before {
 
 /* ---------------------SIDEBAR SECTION START--------------------- */
 
-.sidebar_color {
+.side_color {
   background-color: var(--darkB);
   color: var(--white);
 }
