--- a/views/main.ejs
+++ b/views/main.ejs
@@ -62,7 +62,7 @@
       </section>
 
       <!-- SIDE BAR SECTION THAT CONTAINS, THE PROFILE PICTURE, THE SOCIAL MEDIA, THE MAIN NAV BAR AND THE COPYRIGHT -->
-      <section id="side" class="sidebar_section sidebar_color">
+      <section id="side" class="sidebar_section side_color">
         <div class="side">
           <div class="profile_pic">
             <img class="pic" src="/public/images/img5.jpg" alt="" />
